Fixing vertical alignment of icons.

--- a/src/assets/scss/theme/_icons.scss
+++ b/src/assets/scss/theme/_icons.scss
@@ -28,7 +28,7 @@ $font-path: "/bda-des-sys/assets/fonts/" !default;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  // vertical-align: -0.15rem;
+  vertical-align: -0.1rem;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
